feat[frontend]: atualiza ícones no HTML e JS para usar Material Symbols Outlined

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -5,10 +5,10 @@
     <title>TODO List Java</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <!-- Google Material Icons -->
+    <!-- Google Material Icons (para ícones clássicos) -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!-- Google Material Symbols Outlined -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=task_alt" />
+    <!-- Google Material Symbols Outlined (carrega também edit e delete usados no JS) -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=task_alt,edit,delete" />
 </head>
 <body>
     <div class="container">
