feat[frontend]: adiciona controle de status para colunas de tarefas e melhora a seleção visual

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -79,7 +79,7 @@
                   <span class="column-label">Feito</span>
                 </div>
 
-                <!-- 🆕 NOVO: Controle de status da coluna (inicialmente escondido) -->
+                <!-- NOVO: Controle de status da coluna (inicialmente escondido) -->
                 <div class="column-status-control hidden" id="control-DONE">
                     <label>Mover para:</label>
                     <select id="status-select-DONE">
