feat[frontend]: remove labels dos status control e atuaziza styles

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -41,7 +41,7 @@
 
                 <!--Controle de status da coluna (inicialmente escondido) -->
                 <div class="column-status-control hidden" id="control-TODO">
-                    <label>Mover para:</label>
+                    <label></label>
                     <select id="status-select-TODO">
                         <option value="">Selecione...</option>
                         <option value="TODO">A Fazer</option>
@@ -61,7 +61,7 @@
 
                 <!--Controle de status da coluna (inicialmente escondido) -->
                 <div class="column-status-control hidden" id="control-DOING">
-                    <label>Mover para:</label>
+                    <label></label>
                     <select id="status-select-DOING">
                         <option value="">Selecione...</option>
                         <option value="TODO">A Fazer</option>
@@ -81,7 +81,7 @@
 
                 <!-- NOVO: Controle de status da coluna (inicialmente escondido) -->
                 <div class="column-status-control hidden" id="control-DONE">
-                    <label>Mover para:</label>
+                    <label></label>
                     <select id="status-select-DONE">
                         <option value="">Selecione...</option>
                         <option value="TODO">A Fazer</option>
